tooling/nargo_cli/tests/snapshots/compile_failure/array_length_defaulting/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: use of deprecated function zeroed
  ┌─ src/main.nr:2:23
  │
2 │     let x = std::mem::zeroed();
  │                       ------ This function has been renamed to `uninitialized`
  │

error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:6:18
  │
6 │ fn foo<N>(array: [Field; N]) {
  │                  ---------- the numeric generic is not of type `u32`
  │

Aborting due to 1 previous error
